[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/throw.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.84667, 2.92787 )

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0, 0.0962963, 0.385185, 0.725926, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0.96875, 1, 0, 1, 1, 0.75, 0, 1, 1, 0.679688, 0, 1, 1, 0.376471, 0, 0.172549 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
emission_shape = 1
emission_sphere_radius = 6.0
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 45.0
scale = 5.0
color_ramp = SubResource( 7 )

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.281481, 0.466667, 0.718518, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0, 1, 0.789063, 1, 0.394135, 0.960938, 0.844513, 1, 0.684128, 0.957031, 0.90778, 0.527778, 0.846069, 0.933594, 0.933594, 0 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 1
emission_sphere_radius = 6.0
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 45.0
scale = 5.0
color_ramp = SubResource( 3 )

[sub_resource type="Gradient" id=9]
offsets = PoolRealArray( 0, 0.340741, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 0.335938, 1, 0, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=10]
gradient = SubResource( 9 )

[sub_resource type="ParticlesMaterial" id=11]
emission_shape = 1
emission_sphere_radius = 6.0
flag_disable_z = true
gravity = Vector3( 0, 30, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 45.0
scale = 5.0
color_ramp = SubResource( 10 )

[node name="throw" type="Area2D"]
position = Vector2( 501.055, 312.324 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="go" type="Timer" parent="."]
wait_time = 4.0

[node name="fire" type="Particles2D" parent="."]
position = Vector2( 5, 0 )
rotation = 3.14159
scale = Vector2( 6, 6 )
z_index = -10
emitting = false
amount = 200
lifetime = 0.8
process_material = SubResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="ice" type="Particles2D" parent="."]
position = Vector2( 5.05994, -0.0246887 )
rotation = 3.14159
scale = Vector2( 6, 6 )
z_index = -10
emitting = false
amount = 200
lifetime = 0.8
process_material = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="smell" type="Particles2D" parent="."]
position = Vector2( 48.2434, 0.0189362 )
rotation = 3.14159
scale = Vector2( 6, 6 )
z_index = -10
emitting = false
amount = 3
lifetime = 0.8
process_material = SubResource( 11 )
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="go" to="." method="_on_go_timeout"]
